# Voice_to_Text

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: ci.yml
SSD/: SSD__voice_to_text__1.md  SSD__voice_to_text__2.md  SSD__voice_to_text__3.md
tests/: test_chunking.py  test_cli_source.py  test_run_logic.py  test_selection.py  test_targets.py  test_transcript.py
voice_to_text__app/: paths.py
voice_to_text__app/application/bench/: bench_service.py  matrix.py  scoring.py  selection.py
voice_to_text__app/application/prod/: prod_service.py
voice_to_text__app/domain/: chunking.py  exceptions.py  models.py  run_logic.py
voice_to_text__app/domain/ports/: run_repository.py  target_preparer.py  transcribe_engine.py
voice_to_text__app/infrastructure/audio/: media.py  process.py  target_preparer.py  targets.py
voice_to_text__app/infrastructure/cli/: entrypoint.py  logging.py
voice_to_text__app/infrastructure/config/: cli_source.py  settings.py
voice_to_text__app/infrastructure/sqlite/: schema.py  sqlite_repo.py
voice_to_text__app/infrastructure/whisper/: whisper_engine.py
